--- a/Rimy3D/source/searchpathsdialog.ui
+++ b/Rimy3D/source/searchpathsdialog.ui
@@ -21,6 +21,12 @@
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
       <widget class="QPushButton" name="pushButton">
+       <property name="minimumSize">
+        <size>
+         <width>90</width>
+         <height>0</height>
+        </size>
+       </property>
        <property name="text">
         <string>Add...</string>
        </property>
@@ -30,6 +36,12 @@
       <widget class="QPushButton" name="pushButton_2">
        <property name="enabled">
         <bool>false</bool>
+       </property>
+       <property name="minimumSize">
+        <size>
+         <width>90</width>
+         <height>0</height>
+        </size>
        </property>
        <property name="text">
         <string>Remove</string>
@@ -58,6 +70,12 @@
      </item>
      <item>
       <widget class="QPushButton" name="pushButton_3">
+       <property name="minimumSize">
+        <size>
+         <width>90</width>
+         <height>0</height>
+        </size>
+       </property>
        <property name="text">
         <string>OK</string>
        </property>
