--- a/Rimy3D/source/mainwindow.ui
+++ b/Rimy3D/source/mainwindow.ui
@@ -70,14 +70,14 @@
     <addaction name="actionEnglish"/>
     <addaction name="actionGerman"/>
    </widget>
-   <widget class="QMenu" name="menuEdit">
+   <widget class="QMenu" name="menuTools">
     <property name="title">
-     <string>Edit</string>
+     <string>Tools</string>
     </property>
     <addaction name="actionConfigure_Bitmap_Paths"/>
    </widget>
    <addaction name="menuFile"/>
-   <addaction name="menuEdit"/>
+   <addaction name="menuTools"/>
    <addaction name="menuHelp"/>
    <addaction name="menuLanguage"/>
   </widget>
@@ -92,11 +92,17 @@
    </property>
   </action>
   <action name="actionClose">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="text">
     <string>Close</string>
    </property>
   </action>
   <action name="actionSave_As">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="text">
     <string>Save As...</string>
    </property>
