--- a/trunk/Rimy3D/source/mainwindow.ui
+++ b/trunk/Rimy3D/source/mainwindow.ui
@@ -74,6 +74,7 @@
     <addaction name="actionFix_GMax_Installation"/>
     <addaction name="actionExtended_Saving_For_GMax"/>
     <addaction name="actionConfigure_Bitmap_Paths"/>
+    <addaction name="actionPreferences"/>
    </widget>
    <addaction name="menuFile"/>
    <addaction name="menuTools"/>
@@ -173,6 +174,11 @@
   <action name="actionExtended_Saving_For_GMax">
    <property name="text">
     <string>Extended Saving For GMax...</string>
+   </property>
+  </action>
+  <action name="actionPreferences">
+   <property name="text">
+    <string>Preferences...</string>
    </property>
   </action>
  </widget>
