--- a/Rimy3D/source/exportsettingsdialog.ui
+++ b/Rimy3D/source/exportsettingsdialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>208</width>
-    <height>321</height>
+    <height>368</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -173,6 +173,51 @@
          <string>Direct Vertex Matching</string>
         </property>
        </widget>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item>
+    <widget class="QWidget" name="w6" native="true">
+     <layout class="QVBoxLayout" name="verticalLayout_7">
+      <property name="margin">
+       <number>0</number>
+      </property>
+      <item>
+       <widget class="QLabel" name="lbBaseXmac">
+        <property name="text">
+         <string>Base _XMAC File:</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <layout class="QHBoxLayout" name="hlC">
+        <property name="spacing">
+         <number>0</number>
+        </property>
+        <item>
+         <widget class="QLineEdit" name="leBaseXmac"/>
+        </item>
+        <item>
+         <widget class="QPushButton" name="pbBaseXmac">
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>0</height>
+           </size>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>30</width>
+            <height>20</height>
+           </size>
+          </property>
+          <property name="text">
+           <string>...</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
       </item>
      </layout>
     </widget>
