Enhanced viewport navigation.

--- a/Rimy3D/source/preferencesdialog.ui
+++ b/Rimy3D/source/preferencesdialog.ui
@@ -6,14 +6,24 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>264</width>
-    <height>183</height>
+    <width>276</width>
+    <height>206</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Preferences</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
+   <item>
+    <widget class="QCheckBox" name="cbGizmos">
+     <property name="text">
+      <string>Show Transform Gizmos</string>
+     </property>
+     <property name="checked">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
    <item>
     <layout class="QHBoxLayout" name="hl2">
      <item>
