--- a/trunk/Rimy3D/source/preferencesdialog.ui
+++ b/trunk/Rimy3D/source/preferencesdialog.ui
@@ -6,14 +6,32 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>276</width>
-    <height>206</height>
+    <width>302</width>
+    <height>237</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Preferences</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
+   <item>
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <widget class="QCheckBox" name="cbAutoUpdate">
+       <property name="text">
+        <string>Check For Updates Automatically</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="pbUpdate">
+       <property name="text">
+        <string>Check Now</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
    <item>
     <widget class="QCheckBox" name="cbGizmos">
      <property name="text">
