--- a/trunk/Rimy3D/source/searchpathsdialog.ui
+++ b/trunk/Rimy3D/source/searchpathsdialog.ui
@@ -53,6 +53,9 @@
        <property name="text">
         <string>Add Subpaths</string>
        </property>
+       <property name="checked">
+        <bool>true</bool>
+       </property>
       </widget>
      </item>
      <item>
