--- a/trunk/Rimy3D/source/searchpathsdialog.ui
+++ b/trunk/Rimy3D/source/searchpathsdialog.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Configure Bitmap Paths</string>
+   <string>Configure Search Paths</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
