--- a/Rimy3D/source/resources/plugins.qrc
+++ b/Rimy3D/source/resources/plugins.qrc
@@ -8,5 +8,8 @@
         <file>plugins/blender_3db/__init__.py</file>
         <file>plugins/blender_3db/export_3db.py</file>
         <file>plugins/blender_3db/import_3db.py</file>
+        <file>plugins/max_3db/3dbTools.ms</file>
+        <file>plugins/max_3db/3db Tools.txt</file>
+        <file>plugins/max_3db/3db Tools_DE.txt</file>
     </qresource>
 </RCC>
