--- a/Rimy3D/source/mainwindow.ui
+++ b/Rimy3D/source/mainwindow.ui
@@ -93,11 +93,17 @@
      <string>- New Version Available! -</string>
     </property>
    </widget>
+   <widget class="QMenu" name="menuSearchPathsReminder">
+    <property name="title">
+     <string>- Search paths reminder -</string>
+    </property>
+   </widget>
    <addaction name="menuFile"/>
    <addaction name="menuTools"/>
    <addaction name="menuHelp"/>
    <addaction name="menuLanguage"/>
    <addaction name="menuNew_Version_Available"/>
+   <addaction name="menuSearchPathsReminder"/>
   </widget>
   <action name="actionAbout">
    <property name="text">
